--- a/style.css
+++ b/style.css
@@ -1,12 +1,26 @@
+
+* {
+    font-family: 'Montserrat', sans-serif;
+}
+
+.blurred {
+    filter: blur(3px);
+    transition: 600ms;
+    pointer-events: none;
+}
+
 body {
     background-color:antiquewhite;
+    
 }
 
 .calendar-grid {
     display: grid;
-    grid-template-columns: 60px repeat(8, 2fr);
-    grid-template-rows: 40px repeat(25, 1fr);
+    grid-template-columns: 60px repeat(7, 2fr);
+    grid-template-rows: 40px repeat(24, 1fr);
+    width: 700px;
 }
+
 .time-header {
     grid-row-start: 1;
     border: 1px solid;
@@ -14,6 +28,7 @@ body {
 }
 
 .time {
+    text-align: center;
     grid-column-start: 1;
     border: 1px solid;
     background-color: gray;
@@ -29,10 +44,38 @@ body {
 }
 
 .empty {
+    transition: 250ms;
     border: 1px solid;
-    background-color: darkgreen;
+    background-color: green;
+}
+.empty:hover {
+    background-color: #ff0000;
 }
 
-.darkred {
+.full {
+    transition: 250ms;
     background-color: darkred;
+}
+
+.nav {
+    height: 50px;
+    width: 100vw;
+    background-color: rgb(81, 87, 143);
+}
+
+.popup-div {
+    z-index: 1;
+    width: 400px;
+    height: 500px;
+    background-color: blueviolet;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+}
+
+.popup-div-display {
+    transition: 250ms;
+    display: block;
 }
