--- a/style.css
+++ b/style.css
@@ -1,38 +1,3 @@
-body {
-    background-color:antiquewhite;
-}
-
-.calendar-grid {
-    display: grid;
-    grid-template-columns: 60px repeat(8, 2fr);
-    grid-template-rows: 40px repeat(25, 1fr);
-}
-.time-header {
-    grid-row-start: 1;
-    border: 1px solid;
-    background-color: gray;
-}
-
-.time {
-    grid-column-start: 1;
-    border: 1px solid;
-    background-color: gray;
-}
-
-.day-header {
-    grid-row-start: 1;
-    grid-column-start: 2 / 2;
-    /* grid-row: 1 / 2; */
-    border: 1px solid;
-    text-align: center;
-    background-color: gray;
-}
-
-.empty {
-    border: 1px solid;
-    background-color: darkgreen;
-}
-
-.darkred {
-    background-color: darkred;
+.navBtn.hidden {
+    display: none;
 }
