--- a/style.css
+++ b/style.css
@@ -3,6 +3,14 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+/* #hidden-exit {
+    z-index: 0;
+    width: 100vw;
+    height: 100vw;
+    display: none;
+    pointer-events: all;
+} */
+
 .blurred {
     filter: blur(3px);
     transition: 600ms;
@@ -10,8 +18,9 @@
 }
 
 body {
-    background-color:antiquewhite;
-    
+    background-color:#747dd3;
+    margin-top: 0px;
+    margin-left: 0px;
 }
 
 .calendar-grid {
@@ -64,16 +73,35 @@ body {
 }
 
 .nav {
+    display: flex;
     height: 50px;
     width: 100vw;
     background-color: rgb(81, 87, 143);
 }
 
-.popup-div {
+.nav-btn {
+    border: 2px solid;
+    margin: 10px;
+    flex: 1;
+}
+
+.nav-btn:hover {
+    background-color: rgb(138, 138, 138);
+}
+
+#logout-btn {
+    background-color: rgb(236, 56, 56);
+}
+
+#logout-btn:hover {
+    background-color: rgb(153, 36, 36);
+}
+
+.hidden-popup-div {
     z-index: 1;
     width: 400px;
     height: 500px;
-    background-color: blueviolet;
+    background-color: rgb(70, 161, 221);
     position: absolute;
     top: 50%;
     left: 50%;
@@ -85,3 +113,25 @@ body {
     transition: 250ms;
     display: block;
 }
+
+.exit-popup {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-15%, 15%);
+    background-color: red;
+}
+
+
+/* #budget-btn {
+
+}
+#settings-btn {
+
+}
+#feedback-btn {
+
+}
+#support-btn {
+
+} */
