--- a/mainstyle.css
+++ b/mainstyle.css
@@ -1,6 +1,6 @@
-
 * {
     font-family: 'Montserrat', sans-serif;
+    user-select: none;
 }
 
 /* #hidden-exit {
@@ -90,23 +90,25 @@ body {
 }
 
 #logout-btn {
-    background-color: rgb(236, 56, 56);
+    background-color: #ec3838;
 }
 
 #logout-btn:hover {
-    background-color: rgb(153, 36, 36);
+    background-color: #992424;
 }
 
 .hidden-popup-div {
+    filter: drop-shadow(0px 0px 30px black);
     z-index: 1;
     width: 400px;
     height: 500px;
-    background-color: rgb(70, 161, 221);
+    background-color: #46a1dd;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     display: none;
+    border: 4px solid #1d435c;
 }
 
 .display-none {
@@ -122,10 +124,18 @@ body {
     position: absolute;
     top: 0;
     right: 0;
+    /* width: 30px;
+    height: 30px; */
+    width: 8%;
+    height: 6%;
     transform: translate(-15%, 15%);
-    background-color: red;
+    background-color: #ec3838;
+    border: 2px solid;
 }
 
+.exit-popup:hover {
+    background-color: #992424;
+}
 
 /* #budget-btn {
 
