--- a/mainstyle.css
+++ b/mainstyle.css
@@ -137,7 +137,19 @@ body {
     background-color: #992424;
 }
 
+
+
+.content {
+    margin-left: 10px;
+}
+  
+
 /* #budget-btn {
+
+
+
+
+
 
 }
 #settings-btn {
@@ -149,3 +161,11 @@ body {
 #support-btn {
 
 } */
+
+
+
+
+
+
+
+
