--- a/mainstyle.css
+++ b/mainstyle.css
@@ -139,10 +139,61 @@ body {
 
 
 
+
+
+
+
+.textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    font-size: 16px;
+    resize: none;
+    
+}
+
+
+
 .content {
     margin-left: 10px;
+
+    width: 10;
+
 }
-  
+
+
+
+.money-info {
+    width: 400px;
+    height: 700px;
+}
+
+
+
+.prev-month-btn {
+
+width: 30px;
+
+
+}
+
+.next-month-btn {
+
+width: 30px;
+
+
+}
+
+.navigation button {
+
+    margin-right: 5px; 
+
+}
+
+
+
+
+
 
 /* #budget-btn {
 
