--- a/mainstyle.css
+++ b/mainstyle.css
@@ -150,12 +150,56 @@ body {
     display: none;
 }
 
+/* viranats start*/a
+#feedback-div h2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+.test-container {
+    margin-left: 10px;
+    margin-right: 10px;
+}
 
+#support-div {
+    justify-content: center;
+    align-items: center;
+    
+}
 
+#popup-message {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    border: 2px solid black;
+    z-index: 9999; /* Sørg for at pop-up'en vises over alt andet */
+}
 
+.submit-btn {
+    background-color: red;
+    font-size: medium;
+    font-weight: 700;
+}
 
+#rating.class {
+    align-items: center;
+}
+p#Skriv-til-visevaerter{
+    font-size: large;
+    font-weight: 700;
+}
+.send-btn {
+    background-color: red;
+    font-size: small;
+    font-weight: 700;
+}
+/* viranats slut */
 
+/* rahmos start */
 .textarea {
     width: 100%;
     height: 150px;
@@ -165,8 +209,6 @@ body {
     
 }
 
-
-
 .content {
     margin-left: 10px;
 
@@ -174,70 +216,20 @@ body {
 
 }
 
-
-
 .money-info {
     width: 400px;
     height: 700px;
 }
 
-
-
 .prev-month-btn {
-
 width: 30px;
-
-
 }
 
 .next-month-btn {
-
 width: 30px;
-
-
 }
 
 .navigation button {
-
     margin-right: 5px; 
-
 }
-
-
-
-/* #budget-btn {
-
-
-
-
-
-
-}
-#settings-btn {
-
-}
-#feedback-btn {
-
-}
-#support-btn {
-
-} */
-
-#contact-btn {
-    background-color: #ce1a41; 
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin-top: 10px;
-    cursor: pointer;
-    border-radius: 5px;
-}
-
-.red-button {
-    background-color: red;
-    color: white;
-}
+/* rahmos slut */
