--- a/mainstyle.css
+++ b/mainstyle.css
@@ -3,14 +3,6 @@
     user-select: none;
 }
 
-/* #hidden-exit {
-    z-index: 0;
-    width: 100vw;
-    height: 100vw;
-    display: none;
-    pointer-events: all;
-} */
-
 .blurred {
     filter: blur(3px);
     transition: 600ms;
@@ -75,6 +67,11 @@ body {
     transition: 250ms;
     border: 1px solid;
     background-color: darkred;
+}
+
+.locked {
+    border: 1px solid;
+    background-color: rgb(18, 77, 77);
 }
 
 .full:hover {
@@ -234,6 +231,14 @@ width: 30px;
 }
 /* rahmos slut */
 
-.current-day {
-    background-color: #46a1dd;
+.arrow {
+    width: 100px;
+    height: 50px;
+    margin-left: 10px;
+}
+
+#add-times {
+    margin-left: 10px;
+    width: 463px;
+    height: 50px;
 }
