--- a/mainstyle.css
+++ b/mainstyle.css
@@ -53,6 +53,7 @@ body {
     font-size: 18px;
 }
 
+
 .cell {
     transition: 250ms;
     border: 1px solid;
@@ -71,6 +72,9 @@ body {
 
 .locked {
     border: 1px solid;
+    background-color: rgb(18, 77, 77);
+}
+.locked:hover {
     background-color: rgb(18, 77, 77);
 }
 
@@ -154,11 +158,6 @@ body {
     align-items: center;
 }
 
-.test-container {
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
 #support-div {
     justify-content: center;
     align-items: center;
@@ -235,10 +234,30 @@ width: 30px;
     width: 100px;
     height: 50px;
     margin-left: 10px;
+    border: 2px solid;
 }
 
 #add-times {
     margin-left: 10px;
     width: 463px;
     height: 50px;
+}
+.shared-items-selected {
+    position: absolute;
+    background-color: #1d435c;
+}
+
+.shared-items-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    position: absolute;
+    top: 120px;
+    right: 700px;
+}
+
+.shared-items-btn {
+    width: 200px;
+    height: 200px;
+    border: 2px solid;
+    margin: 10px;
 }
