--- a/mainstyle.css
+++ b/mainstyle.css
@@ -237,7 +237,7 @@ width: 30px;
     border: 2px solid;
 }
 
-#add-times {
+#order-btn {
     margin-left: 10px;
     width: 463px;
     height: 50px;
