--- a/mainstyle.css
+++ b/mainstyle.css
@@ -92,6 +92,7 @@ body {
     border: 2px solid;
     margin: 10px;
     flex: 1;
+    border-radius: 25px;
 }
 
 .nav-btn:hover {
@@ -127,6 +128,7 @@ body {
 .popup-div-display {
     transition: 250ms;
     display: block;
+    border-radius: 25px;
 }
 
 .exit-popup {
@@ -140,6 +142,7 @@ body {
     transform: translate(-15%, 15%);
     background-color: #ec3838;
     border: 2px solid;
+    border-radius: 25px;
 }
 
 
@@ -147,35 +150,114 @@ body {
     display: none;
 }
 
-/* #budget-btn {
-
+/* viranats start*/a
+#feedback-div h2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-#settings-btn {
 
+#support-div {
+    justify-content: center;
+    align-items: center;
+    
 }
-#feedback-btn {
 
+#popup-message {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    border: 2px solid black;
+    z-index: 9999; /* Sørg for at pop-up'en vises over alt andet */
 }
-#support-btn {
 
-} */
+.submit-btn {
+    background-color: red;
+    font-size: medium;
+    font-weight: 700;
+}
 
-#contact-btn {
-    background-color: #ce1a41; 
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin-top: 10px;
-    cursor: pointer;
-    border-radius: 5px;
+#rating.class {
+    align-items: center;
+}
+p#Skriv-til-visevaerter{
+    font-size: large;
+    font-weight: 700;
 }
 
 .red-button {
     background-color: red;
-    color: white;
+    font-size: small;
+    font-weight: 700;
+}
+/* viranats slut */
+
+/* rahmos start */
+.textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    font-size: 16px;
+    resize: none;
+    
 }
 
+.content {
+    margin-left: 10px;
+
+    width: 10;
+
+}
+
+.money-info {
+    width: 400px;
+    height: 700px;
+}
+
+.prev-month-btn {
+width: 30px;
+}
+
+.next-month-btn {
+width: 30px;
+}
+
+.navigation button {
+    margin-right: 5px; 
+}
+/* rahmos slut */
+
+.arrow {
+    width: 100px;
+    height: 50px;
+    margin-left: 10px;
+    border: 2px solid;
+}
+
+#order-btn {
+    margin-left: 10px;
+    width: 463px;
+    height: 50px;
+}
+.shared-items-selected {
+    position: absolute;
+    background-color: #1d435c;
+}
+
+.shared-items-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    position: absolute;
+    top: 120px;
+    right: 700px;
+}
+
+.shared-items-btn {
+    width: 200px;
+    height: 200px;
+    border: 2px solid;
+    margin: 10px;
+}
