--- a/mainstyle.css
+++ b/mainstyle.css
@@ -84,6 +84,14 @@ body {
     background-color: rgb(18, 77, 77);
 }
 
+.self-locked {
+    border: 1px solid;
+    background-color: rgb(72, 18, 77);
+}
+.self-locked:hover {
+    background-color: rgb(72, 18, 77);
+}
+
 .full:hover {
     background-color: rgb(0, 71, 0);
 }
@@ -266,4 +274,15 @@ width: 30px;
     height: 200px;
     border: 2px solid;
     margin: 10px;
+}
+
+.confirm-btn {
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    border: 2px solid;
+    width: 100px;
+    height: 35px;
 }
