--- a/mainstyle.css
+++ b/mainstyle.css
@@ -96,13 +96,26 @@ body {
 }
 
 .nav-btn {
-    border: 2px solid;
+    border: rgba(0, 0, 0, 0);
     margin: 10px;
     flex: 1;
+    border-radius: 30px;
 }
 
 .nav-btn:hover {
     background-color: rgb(138, 138, 138);
+}
+
+.nav-btn:focus {
+    background-color: rgb(138, 138, 138);
+}
+
+.nav-btn.focused {
+    background-color: rgb(138, 138, 138);
+}
+
+.nav-btn:active {
+    background-color: rgb(82, 80, 80);
 }
 
 #logout-btn {
@@ -111,6 +124,10 @@ body {
 
 #logout-btn:hover {
     background-color: #992424;
+}
+
+#logout-btn:active {
+    background-color: #681818;
 }
 
 .hidden-popup-div {
@@ -125,6 +142,7 @@ body {
     transform: translate(-50%, -50%);
     display: none;
     border: 4px solid #1d435c;
+    border-radius: 30px;
 }
 
 .display-none {
@@ -138,19 +156,42 @@ body {
 
 .exit-popup {
     position: absolute;
-    top: 0;
-    right: 0;
-    /* width: 30px;
-    height: 30px; */
-    width: 8%;
-    height: 6%;
-    transform: translate(-15%, 15%);
-    background-color: #ec3838;
-    border: 2px solid;
+    top: 10px;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
 }
 
-.exit-popup:hover {
-    background-color: #992424
+.exit-popup::before,
+.exit-popup::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 24px;
+    height: 2px;
+    background-color: #333;
+    transition: transform 0.3s ease;
+}
+
+.exit-popup::before {
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.exit-popup::after {
+    transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.exit-popup:hover::before,
+.exit-popup:hover::after {
+    background-color: #555;
+}
+
+.exit-popup:focus {
+    outline: none;
 }
 
 .invisible-exit {
@@ -170,6 +211,7 @@ body {
     
 }
 
+
 #popup-message {
     position: fixed;
     top: 50%;
@@ -177,28 +219,50 @@ body {
     transform: translate(-50%, -50%);
     background-color: white;
     padding: 20px;
-    border: 2px solid black;
+    border: 2px solid rgb(0, 0, 0);
     z-index: 9999; /* Sørg for at pop-up'en vises over alt andet */
 }
 
 .submit-btn {
-    background-color: red;
+    background-color: rgb(255, 255, 255);
     font-size: medium;
     font-weight: 700;
+    border-radius: 30px;
+}
+
+.submit-btn:hover {
+    background-color: rgb(138, 138, 138);
+}
+
+.submit-btn:active {
+    background-color: rgb(82, 80, 80);
 }
 
 #rating.class {
     align-items: center;
 }
+
+
 p#Skriv-til-visevaerter{
     font-size: large;
     font-weight: 700;
 }
+
 .send-btn {
-    background-color: red;
+    background-color: rgb(255, 255, 255);
     font-size: small;
     font-weight: 700;
+    border-radius: 30px;
 }
+
+.send-btn:hover {
+    background-color: rgb(138, 138, 138);
+}
+
+.send-btn:active {
+    background-color: rgb(82, 80, 80);
+}
+
 /* viranats slut */
 
 /* rahmos start */
@@ -213,9 +277,8 @@ p#Skriv-til-visevaerter{
 
 .content {
     margin-left: 10px;
-
-    width: 10;
-
+    margin-top: 10px;
+    resize: none;
 }
 
 .money-info {
@@ -224,34 +287,61 @@ p#Skriv-til-visevaerter{
 }
 
 .prev-month-btn {
-width: 30px;
+    width: 30px;
 }
 
 .next-month-btn {
-width: 30px;
+    width: 30px;
 }
 
 .navigation button {
-    margin-right: 5px; 
+    margin-right: 5px;
+    border-radius: 30px;
 }
+
+.navigation button:hover {
+    background-color: rgb(138, 138, 138);
+}
+
+.navigation button:active {
+    background-color: rgb(82, 80, 80);
+}
+
+
+
 /* rahmos slut */
 
 .arrow {
     width: 100px;
     height: 50px;
     margin-left: 10px;
-    border: 2px solid;
+    border: rgba(0, 0, 0, 0);
+    border-radius: 30px;
+}
+
+.arrow:hover {
+    background-color: rgb(138, 138, 138);
+}
+
+.arrow:active {
+    background-color: rgb(82, 80, 80);
 }
 
 #order-btn {
     margin-left: 10px;
     width: 463px;
     height: 50px;
+    border-radius: 30px;
 }
-.shared-items-selected {
-    position: absolute;
-    background-color: #1d435c;
+
+#order-btn:focus {
+    background-color: rgb(138, 138, 138);
 }
+
+#order-btn:active {
+    background-color: rgb(82, 80, 80);
+}
+
 
 .shared-items-container {
     display: grid;
@@ -264,6 +354,28 @@ width: 30px;
 .shared-items-btn {
     width: 200px;
     height: 200px;
-    border: 2px solid;
+    border: rgba(0, 0, 0, 0);
     margin: 10px;
+    border-radius: 30px;
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+/* Increase specificity */
+.shared-items-container .shared-items-btn:active {
+    background-color: rgb(82, 80, 80);
+}
+
+.shared-items-btn:hover {
+    background-color: rgb(138, 138, 138);
+}
+
+.shared-items-btn:focus {
+    background-color: rgb(138, 138, 138);
+}
+
+
+.shared-items-selected {
+    position: absolute;
 }
