--- a/indexstyle.css
+++ b/indexstyle.css
@@ -76,5 +76,17 @@ body {
 }
 
 .dark-blue {
-    color: darkblue;
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #764ba2;
+    color: #ffffff;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    text-decoration: dashed;
+}
+
+.dark-blue:hover {
+    background-color: #5c3e8f;
 }
