--- a/mainstyle.css
+++ b/mainstyle.css
@@ -56,38 +56,38 @@ body {
 .cell {
     transition: 250ms;
     border: 1px solid;
-    background-color: green;
+    background-color: #5fa061;
     cursor: pointer;
 }
 
 .cell:hover {
-    background-color: #ff0000;
+    background-color: #dac854
 }
 
 .full {
     transition: 250ms;
     border: 1px solid;
-    background-color: darkred;
+    background-color: #dac854
 }
 
 .full:hover {
-    background-color: rgb(0, 71, 0);
+    background-color: #dac854
 }
 
 .locked {
     border: 1px solid;
-    background-color: rgb(18, 77, 77);
+    background-color: #a1352a
 }
 .locked:hover {
-    background-color: rgb(18, 77, 77);
+    background-color: #a1352a
 }
 
 .self-locked {
     border: 1px solid;
-    background-color: rgb(72, 18, 77);
+    background-color: #446b5a;
 }
 .self-locked:hover {
-    background-color: rgb(72, 18, 77);
+    background-color: #446b5a;
 }
 
 
