--- a/mainstyle.css
+++ b/mainstyle.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    background-color:#747dd3;
+    background-color: #f3efe4;
     margin-top: 0px;
     margin-left: 0px;
 }
@@ -25,14 +25,14 @@ body {
 .time-header {
     grid-row-start: 1;
     border: 1px solid;
-    background-color: gray;
+    background-color: #d8d8d8;
 }
 
 .time {
     text-align: center;
     grid-column-start: 1;
     border: 1px solid;
-    background-color: gray;
+    background-color: #d8d8d8
 }
 
 .day-header {
@@ -41,7 +41,7 @@ body {
     /* grid-row: 1 / 2; */
     border: 1px solid;
     text-align: center;
-    background-color: gray;
+    background-color: #d8d8d8;
     position: relative;
 }
 
@@ -103,11 +103,12 @@ body {
     display: flex;
     height: 50px;
     width: 100vw;
-    background-color: rgb(81, 87, 143);
+    background-color: #e6e0d2
 }
 
 .nav-btn {
     border: rgba(0, 0, 0, 0);
+    background-color: #d8d8d8;
     margin: 10px;
     flex: 1;
     border-radius: 30px;
@@ -131,7 +132,10 @@ body {
 }
 
 #logout-btn {
-    background-color: #ec3838;
+    background-color: #b35b52;
+    color: white;
+    font-weight: bolder;
+    font-size: medium;
 }
 
 #logout-btn:hover {
@@ -236,7 +240,7 @@ body {
 }
 
 .submit-btn {
-    background-color: rgb(255, 255, 255);
+    background-color:#d8d8d8;
     font-size: medium;
     font-weight: 700;
     border-radius: 30px;
@@ -262,7 +266,7 @@ p#Skriv-til-visevaerter{
 }
 
 .send-btn {
-    background-color: rgb(255, 255, 255);
+    background-color:#d8d8d8;
     font-size: small;
     font-weight: 700;
     border-radius: 30px;
@@ -314,7 +318,7 @@ p#Skriv-til-visevaerter{
     border: none;
     border-radius: 5px;
     background-color: #764ba2;
-    color: #ffffff;
+    color: #d8d8d8;
     cursor: pointer;
     width: 55px;
     height: 35px;
@@ -329,7 +333,7 @@ p#Skriv-til-visevaerter{
     border: none;
     border-radius: 5px;
     background-color: #764ba2;
-    color: #ffffff;
+    color: #d8d8d8;
     cursor: pointer;
     width: 55px;
     height: 35px;
@@ -358,7 +362,7 @@ p#Skriv-til-visevaerter{
     border: none;
     border-radius: 5px;
     background-color: #764ba2;
-    color: #ffffff;
+    color: #d8d8d8;
     cursor: pointer;
     transition: background-color 0.3s;
     position: relative;
@@ -397,6 +401,7 @@ p#Skriv-til-visevaerter{
 }
 
 #order-btn {
+    background-color: #d8d8d8;
     margin-left: 10px;
     width: 463px;
     height: 50px;
@@ -425,7 +430,7 @@ p#Skriv-til-visevaerter{
     height: 200px;
     border: rgba(0, 0, 0, 0);
     margin: 10px;
-
+    background-color: #d8d8d8;;
     border-radius: 30px;
     font-size: 16px;
     font-weight: bold;
@@ -467,7 +472,7 @@ p#Skriv-til-visevaerter{
     top: 90%;
     left: 50%;
     transform: translate(-50%, -50%);
-
+    background-color: #d8d8d8;;
     border: 2px solid;
     width: 100px;
     height: 35px;
