--- a/mainstyle.css
+++ b/mainstyle.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    background-color:#747dd3;
+    background-color: #f3efe4;
     margin-top: 0px;
     margin-left: 0px;
 }
@@ -25,14 +25,14 @@ body {
 .time-header {
     grid-row-start: 1;
     border: 1px solid;
-    background-color: gray;
+    background-color: #d8d8d8;
 }
 
 .time {
     text-align: center;
     grid-column-start: 1;
     border: 1px solid;
-    background-color: gray;
+    background-color: #d8d8d8
 }
 
 .day-header {
@@ -41,7 +41,7 @@ body {
     /* grid-row: 1 / 2; */
     border: 1px solid;
     text-align: center;
-    background-color: gray;
+    background-color: #d8d8d8;
     position: relative;
 }
 
@@ -56,38 +56,40 @@ body {
 .cell {
     transition: 250ms;
     border: 1px solid;
-    background-color: green;
-    cursor: pointer;
+    background-color: #5fa061;
+    cursor: cell;
 }
 
 .cell:hover {
-    background-color: #ff0000;
+    background-color: #dac854
 }
 
 .full {
     transition: 250ms;
     border: 1px solid;
-    background-color: darkred;
+    background-color: #dac854
 }
 
 .full:hover {
-    background-color: rgb(0, 71, 0);
+    background-color: #457247;
 }
 
 .locked {
     border: 1px solid;
-    background-color: rgb(18, 77, 77);
+    background-color: #a1352a;
+    cursor: not-allowed;
 }
 .locked:hover {
-    background-color: rgb(18, 77, 77);
+    background-color: #a1352a
 }
 
 .self-locked {
     border: 1px solid;
-    background-color: rgb(72, 18, 77);
+    background-color: #446b5a;
+    cursor: not-allowed;
 }
 .self-locked:hover {
-    background-color: rgb(72, 18, 77);
+    background-color: #446b5a;
 }
 
 
@@ -103,11 +105,12 @@ body {
     display: flex;
     height: 50px;
     width: 100vw;
-    background-color: rgb(81, 87, 143);
+    background-color: #e6e0d2
 }
 
 .nav-btn {
     border: rgba(0, 0, 0, 0);
+    background-color: #d8d8d8;
     margin: 10px;
     flex: 1;
     border-radius: 30px;
@@ -131,7 +134,10 @@ body {
 }
 
 #logout-btn {
-    background-color: #ec3838;
+    background-color: #b35b52;
+    color: white;
+    font-weight: bolder;
+    font-size: medium;
 }
 
 #logout-btn:hover {
@@ -147,13 +153,13 @@ body {
     z-index: 1;
     width: 400px;
     height: 500px;
-    background-color: #46a1dd;
+    background-color: #f3efe4;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     display: none;
-    border: 4px solid #1d435c;
+    border: 4px solid #aaa8a1;
     border-radius: 30px;
 }
 
@@ -236,7 +242,7 @@ body {
 }
 
 .submit-btn {
-    background-color: rgb(255, 255, 255);
+    background-color:#d8d8d8;
     font-size: medium;
     font-weight: 700;
     border-radius: 30px;
@@ -262,7 +268,7 @@ p#Skriv-til-visevaerter{
 }
 
 .send-btn {
-    background-color: rgb(255, 255, 255);
+    background-color:#d8d8d8;
     font-size: small;
     font-weight: 700;
     border-radius: 30px;
@@ -314,7 +320,7 @@ p#Skriv-til-visevaerter{
     border: none;
     border-radius: 5px;
     background-color: #764ba2;
-    color: #ffffff;
+    color: #d8d8d8;
     cursor: pointer;
     width: 55px;
     height: 35px;
@@ -329,7 +335,7 @@ p#Skriv-til-visevaerter{
     border: none;
     border-radius: 5px;
     background-color: #764ba2;
-    color: #ffffff;
+    color: #d8d8d8;
     cursor: pointer;
     width: 55px;
     height: 35px;
@@ -358,7 +364,7 @@ p#Skriv-til-visevaerter{
     border: none;
     border-radius: 5px;
     background-color: #764ba2;
-    color: #ffffff;
+    color: #d8d8d8;
     cursor: pointer;
     transition: background-color 0.3s;
     position: relative;
@@ -397,6 +403,7 @@ p#Skriv-til-visevaerter{
 }
 
 #order-btn {
+    background-color: #d8d8d8;
     margin-left: 10px;
     width: 463px;
     height: 50px;
@@ -425,7 +432,7 @@ p#Skriv-til-visevaerter{
     height: 200px;
     border: rgba(0, 0, 0, 0);
     margin: 10px;
-
+    background-color: #d8d8d8;;
     border-radius: 30px;
     font-size: 16px;
     font-weight: bold;
@@ -467,7 +474,7 @@ p#Skriv-til-visevaerter{
     top: 90%;
     left: 50%;
     transform: translate(-50%, -50%);
-
+    background-color: #d8d8d8;;
     border: 2px solid;
     width: 100px;
     height: 35px;
