--- a/mainstyle.css
+++ b/mainstyle.css
@@ -19,7 +19,7 @@ body {
     display: grid;
     grid-template-columns: 60px repeat(7, 2fr);
     grid-template-rows: 40px repeat(24, 1fr);
-    width: 700px;
+    width: 1000px;
 }
 
 .time-header {
@@ -32,7 +32,8 @@ body {
     text-align: center;
     grid-column-start: 1;
     border: 1px solid;
-    background-color: #d8d8d8
+    background-color: #d8d8d8;
+    height: 22px;
 }
 
 .day-header {
@@ -100,52 +101,6 @@ body {
     border: 1px solid;
     background-color: rgb(105, 129, 105);
     pointer-events: none;
-}
-.nav {
-    display: flex;
-    height: 50px;
-    width: 100vw;
-    background-color: #e6e0d2
-}
-
-.nav-btn {
-    border: rgba(0, 0, 0, 0);
-    background-color: #d8d8d8;
-    margin: 10px;
-    flex: 1;
-    border-radius: 30px;
-    cursor: pointer;
-}
-
-.nav-btn:hover {
-    background-color: rgb(138, 138, 138);
-}
-
-/* .nav-btn:focus {
-    background-color: rgb(138, 138, 138);
-}
-
-.nav-btn.focused {
-    background-color: rgb(138, 138, 138);
-} */
-
-.nav-btn:active {
-    background-color: rgb(82, 80, 80);
-}
-
-#logout-btn {
-    background-color: #b35b52;
-    color: white;
-    font-weight: bolder;
-    font-size: medium;
-}
-
-#logout-btn:hover {
-    background-color: #992424;
-}
-
-#logout-btn:active {
-    background-color: #681818;
 }
 
 .hidden-popup-div {
@@ -419,39 +374,23 @@ p#Skriv-til-visevaerter{
     background-color: rgb(82, 80, 80);
 }
 
-.shared-items-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    position: absolute;
-    top: 120px;
-    right: 700px;
+.container-right {
+
+
 }
 
 .shared-items-btn {
+    background-color: #a3a3a3;
+    margin: 20px;
     width: 200px;
     height: 200px;
-    border: rgba(0, 0, 0, 0);
-    margin: 10px;
-    background-color: #d8d8d8;;
     border-radius: 30px;
-    font-size: 16px;
-    font-weight: bold;
-    text-transform: uppercase;
     cursor: pointer;
 }
 
-/* Increase specificity */
-.shared-items-container .shared-items-btn:active {
-    background-color: rgb(82, 80, 80);
-}
-
 .shared-items-btn:hover {
-    background-color: rgb(138, 138, 138);
+    background-color: #8a8a8a;
 }
-
-/* .shared-items-btn:focus {
-    background-color: rgb(138, 138, 138);
-} */
 
 .shared-items-selected {
     position: absolute;
@@ -497,4 +436,124 @@ p#Skriv-til-visevaerter{
 
 #monthly-budget {
     width: 120px;
+}
+
+/* NAVIGATION */
+
+nav{
+    display: flex;
+    width: 100%;
+    background-color: #e6e0d2;
+}
+
+nav img{
+    width: 80px;
+    margin: 5px
+}
+
+nav ul{
+    display: flex;
+    justify-content: space-between;
+}
+
+nav ul .nav-left{
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+nav ul .nav-right{
+display: flex;
+position: absolute;
+margin-right: 15px;
+right: 0;
+top: 20px;
+}
+
+nav ul .nav-right li button{
+    background-color: #a1352a;
+    color: #FFFFFF;
+}
+
+nav ul li{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+nav ul li button{
+    font-size: 25px;
+    margin: 0 0 0 20px;
+    padding: 10px;
+    border-style: none;
+    border-radius: 15px;
+    background-color: #FFFFFF;
+    cursor: pointer;
+    transition: 300ms;
+}
+
+nav ul li button:hover{
+    background-color: #1d1d1d;
+    color: #FFFFFF;
+}
+
+
+
+/* MAIN SECTION */
+
+.main-section-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 100px;
+    }
+
+
+.container-left{
+    margin-right: 100px;
+}
+
+.button-container{
+    margin-top: 20px;
+}
+
+.button-container button{
+    background-color: #AFAFAF;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+.container-right{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-left: 100px;
+}
+
+.container-right img{
+    width: 100px;
+}
+
+.container-right h2{
+    font-size: 20px;
+}
+
+.button-inner{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column-reverse;
+    width: 200px;
+    height: 200px;
+
+}
+
+footer{
+    background-color: #e6e0d2;
+    width: 100%;
+    height: 80px;
+    margin: 0;
+    margin-top: 100px;
+    padding: 0;
+
 }
