--- a/mainstyle.css
+++ b/mainstyle.css
@@ -528,7 +528,7 @@ nav ul .nav-right li button:hover {
 }
 
 
-/* MAIN SECTION */
+/* main section stuff */
 
 .main-section-container{
     display: flex;
